--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,7 @@ a {
 .hero {
     width: 100%;
     height: 100vh;
-    background-image: url('../assets-home/girlstand.webp');
+    background-image: url('../assets-home/girlstand11.jpg');
     background-size: cover;
     background-position: center top;
     background-repeat: no-repeat;
@@ -104,7 +104,7 @@ a {
 /* Paris Collection Section */
 .paris-collection {
     height: 100vh;
-    background-image: url('../assets-home/paris.webp');
+    background-image: url('../assets-home/paris.png');
     background-size: cover;
     background-position: center;
     display: flex;
